<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.ivablagac.wificommander.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/T_Wifi"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="16dp"
                tools:text="@string/T_Wifi" />

            <TextView
                android:id="@+id/textView_WifiStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/T_na"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="16dp"
                tools:text="@string/T_na" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_WifiOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtn_WifiON"
                android:text="@string/T_WifiON"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="59dp"
                tools:text="@string/T_WifiON" />

            <Button
                android:id="@+id/button_WifiOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtn_WifiOFF"
                android:text="@string/T_WifiOFF"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="59dp"
                tools:text="@string/T_WifiOFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/T_SSID"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="149dp"
                tools:text="@string/T_SSID" />

            <EditText
                android:id="@+id/editText_SSID"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="136dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/T_Password"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="206dp"
                tools:text="@string/T_Password" />

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="194dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtn_AddAP"
                android:text="@string/T_AddAP" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtn_DelAP"
                android:text="@string/T_DelAP" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtn_ClearAllAP"
                android:text="@string/T_ClearAPList" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_Connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtn_Connect"
                android:text="@string/T_Connect"
                android:visibility="invisible"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="252dp"
                tools:text="@string/T_Connect" />

            <Button
                android:id="@+id/button_Disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickBtn_Disconnect"
                android:text="@string/T_Disconnect"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="252dp"
                tools:text="@string/T_Disconnect" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
